Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26531

[win32][platform win32-g++-4.6] qtdemo fails to find installed demos and examples

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.3
    • 4.8.1
    • Examples and Demos
    • None
    • fc2696f151f6e19ecb93589e88c7e64796a55faa

      For example, I build Qt-4.8.1 in C:\qt\qtbuild with following commands:
      configure.exe -debug-and-release -opensource -platform win32-g++-4.6 -prefix C:\Qt\4.8.1
      mingw32-make
      and install with
      mingw32-make install

      then qtdemo.exe fails to find installed examples. In build dir examples are in subdirectories "debug" and "release", but installed only one version and without subdirectory. For, example, in build dir there is demos\boxes\debug\boxes.exe and demos\boxes\release\boxes.exe, but in install dir there is only demos\boxes\boxes.exe.

      Qt should install both versions in subdirectories to match build dir or patch qtdemo.exe sources. Patch is attached (for file demos\qtdemo\menumanager.cpp). First way (patch install process) is better IMO.

        1. menumanager.diff
          0.5 kB
          Dark Templar
        For Gerrit Dashboard: QTBUG-26531
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            idarktemplar Dark Templar
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes