QtDemo: Find installed examples on Windows.

Add the '.exe' suffix before checking for the existence
of the file in the example folder and the 'Debug'/'Release'
subfolders. Clean up the code.

Task-number: QTBUG-26531
Change-Id: Idd4927558573fe68bf12f98863d0c8848257d3e2
Reviewed-by: Lars Knoll <lars.knoll@nokia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@nokia.com>